:sparkles: fetch and update current account apis
