# rest-api/resources/src/main/java/org/eclipse/kapua/app/api/resources/v1/resources/Accounts.java
@@ -12,7 +12,20 @@
  *******************************************************************************/
 package org.eclipse.kapua.app.api.resources.v1.resources;
 
-import com.google.common.base.Strings;
+import javax.inject.Inject;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.DefaultValue;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
+import javax.ws.rs.QueryParam;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
 import org.eclipse.kapua.KapuaEntityNotFoundException;
 import org.eclipse.kapua.KapuaException;
 import org.eclipse.kapua.app.api.core.model.CountResult;
@@ -30,19 +43,7 @@ import org.eclipse.kapua.service.account.AccountListResult;
 import org.eclipse.kapua.service.account.AccountQuery;
 import org.eclipse.kapua.service.account.AccountService;
 
-import javax.inject.Inject;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.DefaultValue;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
+import com.google.common.base.Strings;
 
 /*
 @deprecated
@@ -51,7 +52,7 @@ accidentally exposed under:
 Where the scopeId has no meaning of the current user (the one from the session will always be used)
 Remove the match with /{scopeId}/... in the next release
  */
-@Path("{scopeId: (\\w+)?}{path:|/}accounts")
+@Path("{scopeId}/accounts")
 public class Accounts extends AbstractKapuaResource {
 
     @Inject
@@ -62,26 +63,34 @@ public class Accounts extends AbstractKapuaResource {
     /**
      * Gets the {@link Account} list in the scope.
      *
-     * @param scopeId   The {@link ScopeId} in which to search results.
-     * @param name      The {@link Account} name in which to search results.
-     * @param recursive The {@link Account} name in which to search results.
-     * @param sortParam The name of the parameter that will be used as a sorting key
-     * @param sortDir   The sort direction. Can be ASCENDING (default), DESCENDING. Case-insensitive.
-     * @param offset    The result set offset.
-     * @param limit     The result set limit.
+     * @param scopeId
+     *         The {@link ScopeId} in which to search results.
+     * @param name
+     *         The {@link Account} name in which to search results.
+     * @param recursive
+     *         The {@link Account} name in which to search results.
+     * @param sortParam
+     *         The name of the parameter that will be used as a sorting key
+     * @param sortDir
+     *         The sort direction. Can be ASCENDING (default), DESCENDING. Case-insensitive.
+     * @param offset
+     *         The result set offset.
+     * @param limit
+     *         The result set limit.
      * @return The {@link AccountListResult} of all the accounts associated to the current selected scope.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
     @GET
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    @Produces({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML })
     public AccountListResult simpleQuery(@PathParam("scopeId") ScopeId scopeId, //
-                                         @QueryParam("name") String name, //
-                                         @QueryParam("recursive") boolean recursive, //
-                                         @QueryParam("sortParam") String sortParam,
-                                         @QueryParam("sortDir") @DefaultValue("ASCENDING") SortOrder sortDir,
-                                         @QueryParam("offset") @DefaultValue("0") int offset, //
-                                         @QueryParam("limit") @DefaultValue("50") int limit) throws KapuaException {
+            @QueryParam("name") String name, //
+            @QueryParam("recursive") boolean recursive, //
+            @QueryParam("sortParam") String sortParam,
+            @QueryParam("sortDir") @DefaultValue("ASCENDING") SortOrder sortDir,
+            @QueryParam("offset") @DefaultValue("0") int offset, //
+            @QueryParam("limit") @DefaultValue("50") int limit) throws KapuaException {
 
         if (recursive) {
             return accountService.findChildrenRecursively(scopeId);
@@ -107,16 +116,19 @@ public class Accounts extends AbstractKapuaResource {
     /**
      * Queries the results with the given {@link AccountQuery} parameter.
      *
-     * @param scopeId The {@link ScopeId} in which to search results.
-     * @param query   The {@link AccountQuery} to use to filter results.
+     * @param scopeId
+     *         The {@link ScopeId} in which to search results.
+     * @param query
+     *         The {@link AccountQuery} to use to filter results.
      * @return The {@link AccountListResult} of all the result matching the given {@link AccountQuery} parameter.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
     @POST
     @Path("_query")
-    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
-    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Consumes({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
+    @Produces({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
     public AccountListResult query(
             @PathParam("scopeId") ScopeId scopeId, //
             AccountQuery query) throws KapuaException {
@@ -128,17 +140,20 @@ public class Accounts extends AbstractKapuaResource {
     /**
      * Counts the results with the given {@link AccountQuery} parameter.
      *
-     * @param scopeId The {@link ScopeId} in which to count results.
-     * @param query   The {@link AccountQuery} to use to filter results.
+     * @param scopeId
+     *         The {@link ScopeId} in which to count results.
+     * @param query
+     *         The {@link AccountQuery} to use to filter results.
      * @return The count of all the result matching the given {@link AccountQuery} parameter.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
 
     @POST
     @Path("_count")
-    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
-    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Consumes({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
+    @Produces({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
     public CountResult count(
             @PathParam("scopeId") ScopeId scopeId, //
             AccountQuery query) throws KapuaException {
@@ -148,19 +163,21 @@ public class Accounts extends AbstractKapuaResource {
     }
 
     /**
-     * Creates a new Account based on the information provided in AccountCreator
-     * parameter.
+     * Creates a new Account based on the information provided in AccountCreator parameter.
      *
-     * @param scopeId        The {@link ScopeId} in which to create the {@link Account}
-     * @param accountCreator Provides the information for the new {@link Account} to be created.
+     * @param scopeId
+     *         The {@link ScopeId} in which to create the {@link Account}
+     * @param accountCreator
+     *         Provides the information for the new {@link Account} to be created.
      * @return The newly created {@link Account} object.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
 
     @POST
-    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
-    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Consumes({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
+    @Produces({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
     public Response create(
             @PathParam("scopeId") ScopeId scopeId, //
             AccountCreator accountCreator) throws KapuaException {
@@ -172,16 +189,19 @@ public class Accounts extends AbstractKapuaResource {
     /**
      * Returns the Account specified by the "accountId" path parameter.
      *
-     * @param scopeId   The {@link ScopeId} of the requested {@link Account}.
-     * @param accountId The id of the requested Account.
+     * @param scopeId
+     *         The {@link ScopeId} of the requested {@link Account}.
+     * @param accountId
+     *         The id of the requested Account.
      * @return The requested Account object.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
 
     @GET
     @Path("{accountId}")
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    @Produces({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML })
     public Account find(
             @PathParam("scopeId") ScopeId scopeId, //
             @PathParam("accountId") EntityId accountId) throws KapuaException {
@@ -197,18 +217,22 @@ public class Accounts extends AbstractKapuaResource {
     /**
      * Updates the Account based on the information provided in the Account parameter.
      *
-     * @param scopeId   The ScopeId of the requested {@link Account}.
-     * @param accountId The id of the requested {@link Account}
-     * @param account   The modified Account whose attributed need to be updated.
+     * @param scopeId
+     *         The ScopeId of the requested {@link Account}.
+     * @param accountId
+     *         The id of the requested {@link Account}
+     * @param account
+     *         The modified Account whose attributed need to be updated.
      * @return The updated account.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
 
     @PUT
     @Path("{accountId}")
-    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
-    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
+    @Consumes({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
+    @Produces({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
     public Account update(
             @PathParam("scopeId") ScopeId scopeId, //
             @PathParam("accountId") EntityId accountId, //
@@ -222,10 +246,13 @@ public class Accounts extends AbstractKapuaResource {
     /**
      * Deletes the Account specified by the "accountId" path parameter.
      *
-     * @param scopeId   The ScopeId of the requested {@link Account}.
-     * @param accountId The id of the Account to be deleted.
+     * @param scopeId
+     *         The ScopeId of the requested {@link Account}.
+     * @param accountId
+     *         The id of the Account to be deleted.
      * @return HTTP 200 if operation has completed successfully.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
 
