# rest-api/resources/src/main/java/org/eclipse/kapua/app/api/resources/v1/resources/CurrentAccount.java
@@ -12,27 +12,30 @@
  *******************************************************************************/
 package org.eclipse.kapua.app.api.resources.v1.resources;
 
+import javax.inject.Inject;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.GET;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+
 import org.eclipse.kapua.KapuaException;
 import org.eclipse.kapua.app.api.core.resources.AbstractKapuaResource;
 import org.eclipse.kapua.commons.security.KapuaSecurityUtils;
 import org.eclipse.kapua.service.KapuaService;
 import org.eclipse.kapua.service.account.Account;
 import org.eclipse.kapua.service.account.AccountService;
+import org.eclipse.kapua.service.account.CurrentAccountUpdateRequest;
 
-import javax.inject.Inject;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.GET;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.MediaType;
-
+@Path("account")
 public class CurrentAccount extends AbstractKapuaResource {
 
     @Inject
     public AccountService accountService;
 
     @GET
-    @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
+    @Produces({ MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML })
     public Account find() throws KapuaException {
         return KapuaSecurityUtils.doPrivileged(() -> accountService.find(KapuaSecurityUtils.getSession().getScopeId()));
     }
@@ -40,16 +43,18 @@ public class CurrentAccount extends AbstractKapuaResource {
     /**
      * Updates the Account based on the information provided in the Account parameter.
      *
-     * @param account The modified Account whose attributed need to be updated (ScopeId and Id will be ignored and superseded by the ones from the current session)
+     * @param request
+     *         The modified Account whose attributed need to be updated (ScopeId and Id will be ignored and superseded by the ones from the current session)
      * @return The updated account.
-     * @throws KapuaException Whenever something bad happens. See specific {@link KapuaService} exceptions.
+     * @throws KapuaException
+     *         Whenever something bad happens. See specific {@link KapuaService} exceptions.
      * @since 1.0.0
      */
 
     @PUT
-    @Consumes({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
-    @Produces({MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON})
-    public Account update(AccountService.CurrentAccountUpdateRequest request) throws KapuaException {
+    @Consumes({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
+    @Produces({ MediaType.APPLICATION_XML, MediaType.APPLICATION_JSON })
+    public Account update(CurrentAccountUpdateRequest request) throws KapuaException {
         return accountService.updateCurrentAccount(request);
     }
 
