# rest-api/resources/src/main/resources/openapi/openapi.yaml
@@ -89,15 +89,18 @@ paths:
     $ref: './accessInfo/accessInfo-scopeId-accessInfoId-roles-_count.yaml#/paths/~1{scopeId}~1accessinfos~1{accessInfoId}~1roles~1_count'
   /{scopeId}/accessinfos/{accessInfoId}/roles/_query:
     $ref: './accessInfo/accessInfo-scopeId-accessInfoId-roles-_query.yaml#/paths/~1{scopeId}~1accessinfos~1{accessInfoId}~1roles~1_query'
-  ### Account ###
+  ### Current Account ###
+  /account:
+    $ref: './account/account.yaml#/paths/~1account'
+  ### Accounts ###
   /{scopeId}/accounts:
-    $ref: './account/account-scopeId.yaml#/paths/~1{scopeId}~1accounts'
+    $ref: './accounts/accounts-scopeId.yaml#/paths/~1{scopeId}~1accounts'
   /{scopeId}/accounts/{accountId}:
-    $ref: './account/account-scopeId-accountId.yaml#/paths/~1{scopeId}~1accounts~1{accountId}'
+    $ref: './accounts/accounts-scopeId-accountId.yaml#/paths/~1{scopeId}~1accounts~1{accountId}'
   /{scopeId}/accounts/_count:
-    $ref: './account/account-scopeId-_count.yaml#/paths/~1{scopeId}~1accounts~1_count'
+    $ref: './accounts/accounts-scopeId-_count.yaml#/paths/~1{scopeId}~1accounts~1_count'
   /{scopeId}/accounts/_query:
-    $ref: './account/account-scopeId-_query.yaml#/paths/~1{scopeId}~1accounts~1_query'
+    $ref: './accounts/accounts-scopeId-_query.yaml#/paths/~1{scopeId}~1accounts~1_query'
   ### Credential ###
   /{scopeId}/credentials:
     $ref: './credential/credential-scopeId.yaml#/paths/~1{scopeId}~1credentials'
@@ -522,6 +525,12 @@ components:
       type: string
       pattern: '[A-Za-z0-9-_=]+'
       description: The standard format for any ID in Kapua. It's encoded as a [base64url URL- and filename-safe (RFC 4648 §5)](https://tools.ietf.org/html/rfc4648#section-5)
+    ### Common Fields ###
+    optlock:
+      description: |
+        The optlock field is used to detect that this entity has not been modified by someone else. When updating an entity, first do a find to get the latest version of the entity and note the value of the optlock. Then in the update operation, set the optlock value to match the value that you found. If someone else has updated the entity between your find and update operations, the update will fail and the db/server will return an error.\
+        See this [StackOverflow question](http://stackoverflow.com/questions/129329/optimistic-vs-pessimistic-locking) for more information on optimistic locking
+      type: integer
     ### Entities ###
     kapuaEntity:
       description: A standard Entity, that doesn't support edits and versioning. All the objects (except for Datastore objects) in Kapua are Entities
@@ -564,10 +573,7 @@ components:
                 - description: The ID of the Entity who modified this Entity
                   readOnly: true
             optlock:
-              description: |
-                The optlock field is used to detect that this entity has not been modified by someone else. When updating an entity, first do a find to get the latest version of the entity and note the value of the optlock. Then in the update operation, set the optlock value to match the value that you found. If someone else has updated the entity between your find and update operations, the update will fail and the db/server will return an error.\
-                See this [StackOverflow question](http://stackoverflow.com/questions/129329/optimistic-vs-pessimistic-locking) for more information on optimistic locking
-              type: integer
+              $ref: "#/components/schemas/optlock"
     kapuaNamedEntity:
       allOf:
         - $ref: '#/components/schemas/kapuaUpdatableEntity'
@@ -873,11 +879,11 @@ components:
       $ref: './accessInfo/accessInfo.yaml#/components/schemas/accessRoleListResult'
     ### Account Entities ###
     account:
-      $ref: './account/account.yaml#/components/schemas/account'
+      $ref: './accounts/accounts.yaml#/components/schemas/account'
     accountCreator:
-      $ref: './account/account.yaml#/components/schemas/accountCreator'
+      $ref: './accounts/accounts.yaml#/components/schemas/accountCreator'
     accountListResult:
-      $ref: './account/account.yaml#/components/schemas/accountListResult'
+      $ref: './accounts/accounts.yaml#/components/schemas/accountListResult'
     ### Authentication Entities ###
     accessToken:
       $ref: './authentication/authentication.yaml#/components/schemas/accessToken'
