# service/account/api/src/main/java/org/eclipse/kapua/service/account/AccountService.java
@@ -12,8 +12,9 @@
  *******************************************************************************/
 package org.eclipse.kapua.service.account;
 
+import javax.validation.constraints.NotNull;
+
 import org.eclipse.kapua.KapuaException;
-import org.eclipse.kapua.model.KapuaNamedEntityUpdateRequest;
 import org.eclipse.kapua.model.KapuaUpdatableEntity;
 import org.eclipse.kapua.model.id.KapuaId;
 import org.eclipse.kapua.model.query.KapuaQuery;
@@ -21,10 +22,6 @@ import org.eclipse.kapua.service.KapuaEntityService;
 import org.eclipse.kapua.service.KapuaNamedEntityService;
 import org.eclipse.kapua.service.KapuaUpdatableEntityService;
 import org.eclipse.kapua.service.config.KapuaConfigurableService;
-
-import javax.validation.constraints.NotNull;
-import javax.xml.bind.annotation.XmlElement;
-import javax.xml.bind.annotation.XmlRootElement;
 
 /**
  * {@link Account} {@link KapuaEntityService}.
@@ -45,22 +42,11 @@ public interface AccountService extends KapuaEntityService<Account, AccountCreat
      */
     Account updateCurrentAccount(@NotNull CurrentAccountUpdateRequest request) throws KapuaException;
 
-    @XmlRootElement(name = "account")
-    public static class CurrentAccountUpdateRequest extends KapuaNamedEntityUpdateRequest {
-        /**
-         * Gets the {@link Organization}.
-         *
-         * @return The {@link Organization}.
-         * @since 1.0.0
-         */
-        @XmlElement(name = "organization")
-        public Organization organization;
-    }
-
     /**
      * Finds the {@link Account} by the {@link Account#getId()}.
      *
-     * @param id The {@link Account#getId()}.
+     * @param id
+     *         The {@link Account#getId()}.
      * @return The {@link Account} found or {@code null}.
      * @throws KapuaException
      */
@@ -72,7 +58,8 @@ public interface AccountService extends KapuaEntityService<Account, AccountCreat
     /**
      * Returns an {@link AccountListResult} of direct children {@link Account}s of the given {@link Account#getId()}.
      *
-     * @param scopeId The {@link Account#getId()}.
+     * @param scopeId
+     *         The {@link Account#getId()}.
      * @return The {@link AccountListResult} of direct children {@link Account}s.
      * @throws KapuaException
      */
